@@ -22,6 +22,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Marking edits as bot edits with Special:Contributions?bot=1 now requires the
   markbotedit permission, rather than the rollback permission previously used.
   This permission is assigned by default to the sysop group.
+* MediaWiki now checks if serialized files are out of date. New configuration
+  variable $wgCheckSerialized can be set to false to enable old behavior (i.e.
+  to not check and assume they are always up to date)
 
 === New features in 1.12 ===
 * (bug 10735) Add a warning for non-descriptive filenames at Special:Upload
@@ -82,6 +85,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 9633) Add a predefined list of delete reasons to the deletion form
 * Show a warning message when creating/editing a user (talk) page but the user
   does not exists
+* (bug 8396) Ignore out-of-date serialised message caches
 
 === Bug fixes in 1.12 ===
 
